add: resources VideoInfoCategory - update